# drm_test

./: README.md  meson.build  meson_options.txt
include/: config.h
include/renderer/dumb/: framebuffer.h
include/types/: connector.h  crtc.h  device.h  framebuffer.h  output.h  plane.h  swapchain.h
include/utils/: atomic.h  dt_array.h  mode.h  property.h  util.h
src/: main.c  meson.build
src/renderer/: meson.build
src/renderer/dumb/: framebuffer.c  meson.build
src/types/: connector.c  crtc.c  device.c  framebuffer.c  meson.build  output.c  plane.c  swapchain.c
src/utils/: atomic.c  dt_array.c  meson.build  mode.c  property.c
